--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@handlebars/allow-prototype-access": "^1.0.3",
     "@sendgrid/mail": "^7.2.6",
     "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
@@ -21,6 +22,7 @@
     "env-cmd": "^10.1.0",
     "express": "^4.16.4",
     "express-handlebars": "^3.0.2",
+    "express-handlebars-paginate": "^1.0.3",
     "express-session": "^1.16.1",
     "express-validator": "^5.3.1",
     "helmet": "^3.16.0",
